--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=ephesus
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 server.port=8089
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
